--- a/compiler/CMakeLists.txt
+++ b/compiler/CMakeLists.txt
@@ -28,6 +28,7 @@ execute_process(
 	OUTPUT_STRIP_TRAILING_WHITESPACE
 )
 
+SET(CMAKE_BUILD_TYPE "Debug")
 SET(CMAKE_CXX_FLAGS "${LLVM_CXX_FLAGS} -std=c++11 -fexceptions")
 SET(CMAKE_EXE_LINKER_FLAGS "${LLVM_LD_FLAGS}")
 
